src/css/main.css
/* ... */
.main, .products-text {
    text-align: center;
}




.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
    color: #5567A4; 
}




.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating):hover {
    color: #777; 
}


.btn, .btn-large {
    background-color: #62BE48 !important; 
}

.card .card-action a:not(.btn):not(.btn-large):not(.btn-floating) {
    color: #5567A4 !important; 
}


.test {
    display: flex;
    flex-wrap: wrap;
}




.container {
    display: flex;
    flex-wrap: wrap;
    /*margin: 100px;*/
    justify-content: center;
}




.bestSellers {
    background-color: #F8F8F8;
    padding-top: 5px;
}












.col {
    /*text-align: center;
    vertical-align: middle;*/
}




/*#email {
    background-color: white;
}*/




.input-field {
    margin-top: 0;
}




.input-field .btn {
    /*padding-right: 5px;*/
    font-size: 10px;
    /*padding: 0;*/
    max-height: 25px;
}




.sign-up-here {
    margin-bottom: 0;
}




#email {
    width: 50%;
    height: 1rem;
}




i.right {
    margin-left: 0px;
    font-size: 15px;
}




.btn i {
    line-height: normal;
}
.product-image{
    height: 230px;
}


.award {
    height: 200px;
    width: 200px;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    display: flex;
    margin: 10px;
}




.award .btn {
    display: none;
    position: relative;
    /*width: 10%;*/
    /*padding: 10px;*/
}




.award:hover {
    background-color: lightgray;
    opacity: .5;




}




.award:hover .btn {
    display: block;
    position:absolute;
    background-color: #8674ff;
}




.award-list {
    flex-wrap: wrap;
    display: flex;
    justify-content: center;
}


.award-main {
    width: 100px;
    height: 100px;
    padding: 10px;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    display: flex;
    margin: 10px;
    
}


.award-main:hover {
    opacity: .5;
    cursor: pointer;
}


.award-list-main {
    display: flex;
    flex-wrap: wrap;
    justify-content:space-around;
    
}


.testimonials {
    /*width: 95%;*/
    /*margin: 3em auto;*/
    /*margin-left: 10%;*/
    margin-right: 10%;
    /*padding-left: 100px;*/
}

.testimonials h4 {
    padding-left: 30px;
}

.fa-paper-plane {
    position: relative;
    bottom:5px;
}


.grid {
    margin-left: 10%;
    margin-right: 10%;
    
    padding: 0;
    -moz-column-gap: 1.5em;
    -webkit-column-gap: 1.5em;
    column-gap: 1.5em;
    font-size: .85em;
    align-content: center;
    justify-content: center;
    margin-right: 0;
}




.grid h6 {
    
    float: right;
    font-weight: bold;
}




.grid h5 {
    font-style: italic;
}




.grid-item {
    /*width: 300px;
    padding: 10px;
    border: 1px solid gray;
    box-shadow: 1px 1px 3px #888;
    margin: 10px;*/
    display: inline-block;
    background: #fff;
    padding: 1em;
    margin: 0 0 1.5em;
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-shadow: 2px 2px 4px 0 #ccc;
    
}




nav {
    background-color: #B5B5B5 !important;
}


.parallax {
    background-position: center top;
    /*background-position: 50% 100px !important;*/
    /*height: auto;*/
    /*background-size: 100%;*/
    /*width: 1200px;*/
}





.navbar-fixed.test {
    height: 100px;
}


.flex-row-products {
    display: flex;
    margin-top:50px;
    flex-wrap: wrap; /* wrap columns to next line if needed */
}


.flex-col-products {
    flex-grow: 1;
    flex-basis: 33%; /* columns take up whole line */
    
}




.products-card-horizontal{
    height:320px;
    width: 332px;
}


.dropdown-content.active {
    
    /*width: 100% !important;
    left: 0 !important;*/
    display: flex;
    flex-wrap: wrap;
}




.nav-children {
    width: 200px;
}




nav .brand-logo img {
    padding: 10px;
    height: 75px;
    width: auto;
}

.side-nav li {
    cursor: pointer;
}






.contact-form{




    width: 50%;
}








.collapsible{
    width:100%;
}








#sidenav-overlay {
    position: relative;
    background-color: rgba(0,0,0,0) !important;
    z-index: auto !important;
}


.readMore{
    color:cadetblue;
}




.productsGenre {
    padding-top: 20px;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-around;
}




.award-list, .award-list-main, .bestSellers-content {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#headerTestimonial {
        padding-top: 30px;
    font-size: 50px;
  margin: auto;
    width: 50%;
    text-align: center;
}










.award-list-main {
    width: 75%;
    margin: 0 auto;




}




.main, .bestSellers, .awards, .awardTitle {
    text-align: center;
}




.parallax-container {
    height: 800px;
}




.products1 .row {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}




.row .col.s5 {
    margin-left: 0;
}








footer, .page-footer {
    background-color: #5567A4 !important;
}




.submitButton{
    text-align: center;
    margin: 0 auto;

}
#app > div > main > div > form > div > div.submitButton.waves-effect.waves-light.btn{
    width: 25%;
    display: block;    
}
.btn i {
    line-height: 36px;
}


.centerTitle{
    text-align: center;
}


.products1{
    width: 80%;
    margin: 0 auto;
}


.award:hover .btn {
    background-color: #5567A4;
}


#headingAwards {
    padding-top: 30px;
    font-size: 50px;
  margin: auto;
    width: 50%;
    text-align: center;
}




@media only screen and (min-width: 400px) {
    .grid {
        -moz-column-count: 2;
        -webkit-column-count: 2;
        column-count: 2;
    }

}




@media only screen and (min-width: 700px) {
    .grid {
        -moz-column-count: 3;
        -webkit-column-count: 3;
        column-count: 3;
    }
}




@media only screen and (min-width: 900px) {
    .grid {
        -moz-column-count: 3;
        -webkit-column-count: 3;
        column-count: 3;
    }
}
/* ... */

